--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,3 @@
-[default]
-host_key_checking=False
-inventory=inventory.txt
-vault_password_file=vault.txt
+[defaults]
+inventory = inventory.txt
+vault_password_file = vault.txt
