use 'subject', 'verb' parameters
This approach will make the `aptly` module able to be extensible to
match the full commandline api.

Subjects are the output of

  `aptly -h`

and verbs are the output of

  `aptly <subject> -h`

--- a/roles/mirror/tasks/mirrors.yml
+++ b/roles/mirror/tasks/mirrors.yml
@@ -39,7 +39,8 @@
 - name: Create the aptly mirrors
   sudo: no
   aptly:
-    action: "create"
+    subject: mirror
+    verb: create
     name: "{{ item.name }}"
     uri: "{{ item.uri }}"
     distribution: "{{ item.distribution }}"
